...
                selectedIcon: Icon(Icons.wallet_rounded, color: Theme.of(context).colorScheme.primary),
                label: 'Anticipos',
              ),
              NavigationDestination(
                icon: Icon(Icons.home_rounded, color: AppTheme.darkTextSecondary),
                selectedIcon: Icon(Icons.home_rounded, color: Theme.of(context).colorScheme.primary),
                label: 'Inicio',
              ),
              NavigationDestination(
                icon: Icon(Icons.monetization_on_rounded, color: AppTheme.darkTextSecondary),
                selectedIcon: Icon(Icons.monetization_on_rounded, color: Theme.of(context).colorScheme.primary),
                label: 'Propinas',
              ),
...
